<resources>
    <string name="app_name">Image Collection</string>
    <string name="description">You can use the various options provided to draw whatever you like:
        from circles, to rectangles, to text, to free lines. You also have the ability to save your
        images to your Android gallery.</string>
    <string name="welcome">Welcome to The Drawing App</string>
    <string name="verticalLineDescription">Provides the ability to draw a straight line in any direction</string>
    <string name="widthDescription">Enables the width of the lines to be changed for any of the other options</string>
    <string name="lineColorDescription">Provides a means to change line color</string>
    <string name="rectangle">Draws a rectangle or square, whichever the user pleases</string>
    <string name="circle">Draws a circle or oval, whichever the user pleases</string>
    <string name="text">Enables the user to enter any type of text to place on the screen</string>
    <string name="backgroundColor">Changes the background color</string>
    <string name="newImage">Clears the current screen; deletes the image without saving it.</string>
    <string name="gallery">Saves the current image to the gallery</string>
    <string name="erase">Allows the user to erase portions or all of current image</string>
    <string name="undo">Allows the user to undo the previous or multiple actions</string>
    <string name="redo">Provides the ability to override a previous deletion</string>
    <string name="freeLine">Provides the user the ability to draw free lines</string>
    <string-array name="line_widths">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
    </string-array>
    <string-array name="text_size">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
    </string-array>
    <string-array name="line_styles">
        <item>Stroke</item>
        <item>Fill</item>
        <item>Fill and Stroke</item>
    </string-array>
</resources>
